spec/grammar.ebnf
(* Gramática normativa S3 (Sintaxe 0.6 - Indentation-based) *)

program              = { NEWLINE }, [ module-declaration ],
                       { { NEWLINE }, import-declaration },
                       top-level-declaration,
                       { { NEWLINE }, top-level-declaration },
                       { NEWLINE }, EOF ;

top-level-declaration = record-declaration
                      | enum-declaration
                      | function ;

module-declaration   = "module", module-id, NEWLINE ;
import-declaration   = "from", module-id, "import", identifier,
                       [ "as", identifier ], NEWLINE ;
module-id            = identifier, { ".", identifier } ;

function             = [ "export" ], "fn", identifier, "(", [ parameter-list ], ")",
                       "->", type, block ;
parameter-list       = parameter, { ",", parameter } ;
parameter            = identifier, ":", type ;

scalar-type          = "trit" | "tryte" ;
nominal-type         = identifier ;
type                 = ( scalar-type | nominal-type ), { "[", integer, "]" } ;

record-declaration   = "record", identifier, ":", NEWLINE, INDENT,
                       record-field, { record-field }, DEDENT ;
record-field         = identifier, ":", type, NEWLINE ;

enum-declaration     = "enum", identifier, ":", NEWLINE, INDENT,
                       enum-variant, { enum-variant }, DEDENT ;
enum-variant         = identifier, NEWLINE ;

block                = ":", NEWLINE, INDENT, statement, { statement }, DEDENT ;

statement            = variable-declaration
                     | assignment-statement
                     | return-statement
                     | match-statement
                     | while-statement
                     | break-statement
                     | continue-statement ;

variable-declaration = [ "mut" ], identifier, ":", type, "=", initializer, NEWLINE ;
assignment-statement = assignment-target, "=", initializer, NEWLINE ;
assignment-target    = identifier, [ index-suffix ] ;

initializer          = expression | array-literal ;
array-literal        = "[", [ expression, { ",", expression } ], "]" ;

return-statement     = "return", expression, NEWLINE ;
break-statement      = "break", NEWLINE ;
continue-statement   = "continue", NEWLINE ;

match-statement      = "match", expression, ":", NEWLINE, INDENT, { ternary-case }, DEDENT ;
ternary-case         = signed-integer, block ;

while-statement      = "while", expression, block ;
for-statement        = "for", identifier, ":", type-name, "in", "range", "(", expression, ",", expression, ")", block ;

signed-integer       = [ "-" ], integer ;

relational-operator  = "==" | "!=" | "<=" | ">=" | "<" | ">" ;
expression           = relational ;
relational           = comparison, { relational-operator, comparison } ;
comparison           = maximum, { "<=>", maximum } ;
maximum              = minimum, { "|", minimum } ;
minimum              = additive, { "&", additive } ;
additive             = unary, { ("+" | "-"), unary } ;
unary                = ("~" | "-"), unary | primary ;
primary              = integer
                     | qualified-name
                     | identifier-expression
                     | match-expression
                     | len-expression
                     | "(", expression, ")" ;

len-expression       = "len", "(", expression, ")" ;

match-expression     = "match", expression, ":", NEWLINE, INDENT, match-expression-case, { match-expression-case }, DEDENT ;
match-expression-case = signed-integer, ":", expression, NEWLINE ;

identifier-expression = identifier, [ call-suffix ], [ postfix-suffix ] ;
qualified-name       = identifier, ".", identifier ;
postfix-suffix       = index-suffix | field-suffix ;
call-suffix          = "(", [ argument-list ], ")" ;
index-suffix         = "[", expression, "]" ;
field-suffix         = ".", identifier ;
argument-list        = expression, { ",", expression } ;

identifier           = identifier-start, { identifier-continue } ;
identifier-start     = letter | "_" ;
identifier-continue  = letter | digit | "_" ;
integer              = digit, { digit } ;
digit                = "0" | "1" | "2" | "3" | "4"
                     | "5" | "6" | "7" | "8" | "9" ;
letter               = "A" | "B" | "C" | "D" | "E" | "F" | "G" | "H" | "I"
                     | "J" | "K" | "L" | "M" | "N" | "O" | "P" | "Q" | "R"
                     | "S" | "T" | "U" | "V" | "W" | "X" | "Y" | "Z"
                     | "a" | "b" | "c" | "d" | "e" | "f" | "g" | "h" | "i"
                     | "j" | "k" | "l" | "m" | "n" | "o" | "p" | "q" | "r"
                     | "s" | "t" | "u" | "v" | "w" | "x" | "y" | "z" ;

(* Comentários iniciam com # e vão até o fim da linha. Linhas vazias são ignoradas *)
(* pela emissão de NEWLINE. O analisador léxico abstrai os espaços para INDENT/DEDENT. *)
(* Compatibilidade legada/deprecated 0.5 ainda aceita '{', '}', ';' e 'switch'. *)
