bootstrap/s3/generic_parser.py
"""Independent generic recursive-descent parser over TokenArena.

The parser consumes the direct-ID generic token arena and writes the existing
flat SyntaxArena directly.  It does not import or construct bootstrap.s3.ast
objects and it does not call bootstrap.s3.parser.

V1 targets the current default V0.6 grammar.  V0.5 remains owned by the Python
reference parser until separately migrated.
"""

from __future__ import annotations

from dataclasses import dataclass

from .async_limits import MAX_SELECT_ARITY
from .compiler_substrate import SymbolInterner
from .diagnostics import DiagnosticCode, ParseError, SourceLocation
from .generic_syntax import (
    DeclarationPayload,
    FloatPayload,
    FunctionPayload,
    IntegerPayload,
    NodeKind,
    OperatorPayload,
    SymbolPayload,
    SyntaxArena,
    SyntaxSpan,
    TextPayload,
    TypePayload,
)
from .lexer import SyntaxMode, TokenKind
from .source_frontend import TokenArena, TokenRecord


class GenericParserError(RuntimeError):
    """Internal parser-contract failure, distinct from source ParseError."""


@dataclass(frozen=True, slots=True)
class IndependentParseResult:
    syntax_arena: SyntaxArena
    symbol_names: tuple[str, ...]
    parser_backend: str = "independent_generic_recursive_descent"

    @property
    def root_id(self) -> int:
        if self.syntax_arena.root_id is None:
            raise GenericParserError("syntax arena has no root")
        return self.syntax_arena.root_id


_BINARY_OPERATOR_IDS = {
    TokenKind.PLUS: 0,
    TokenKind.MINUS: 1,
    TokenKind.STAR: 2,
    TokenKind.SLASH: 3,
    TokenKind.AMPERSAND: 4,
    TokenKind.PIPE: 5,
    TokenKind.COMPARE: 6,
    TokenKind.EQUAL_EQUAL: 7,
    TokenKind.NOT_EQUAL: 8,
    TokenKind.LESS: 9,
    TokenKind.LESS_EQUAL: 10,
    TokenKind.GREATER: 11,
    TokenKind.GREATER_EQUAL: 12,
}

_UNARY_OPERATOR_IDS = {
    TokenKind.TILDE: 0,
    TokenKind.MINUS: 1,
}

_PRIMITIVE_IDENTIFIER_TYPES = {
    "string",
    "bytes",
    "text",
    "tryte_vector",
    "i64_vector",
    "f64_vector",
    "i64_map",
    "i64_set",
    "host_capability",
    "resource_handle",
}


class GenericParser:
    """V0.6 parser that emits SyntaxArena nodes directly."""

    def __init__(
        self,
        token_arena: TokenArena,
        *,
        interner: SymbolInterner | None = None,
    ) -> None:
        if token_arena.mode is not SyntaxMode.V0_6:
            raise ValueError("independent generic parser currently supports V0.6 only")
        self.token_arena = token_arena
        self.tokens = tuple(record for _, record in token_arena.tokens.items())
        if not self.tokens or self.tokens[-1].kind is not TokenKind.EOF:
            raise GenericParserError("TokenArena must terminate with EOF")
        self.current = 0
        self.interner = interner if interner is not None else SymbolInterner()
        self.arena = SyntaxArena(symbol_count=0, type_count=0)
        self._active_type_parameters: set[str] = set()

    def parse_program(self) -> IndependentParseResult:
        start = self._peek()
        children: list[int] = []
        function_count = 0

        self._skip_newlines()
        if self._match(TokenKind.MODULE):
            children.append(self._parse_module_declaration(self._previous()))
            self._skip_newlines()

        while self._check(TokenKind.FROM):
            children.append(self._parse_import_declaration())
            self._skip_newlines()

        while not self._check(TokenKind.EOF):
            self._skip_newlines()
            if self._check(TokenKind.EOF):
                break
            exported = self._match(TokenKind.EXPORT)
            if self._match(TokenKind.FOREIGN):
                children.append(self._parse_foreign_function())
            elif self._check(TokenKind.RECORD):
                children.append(self._parse_record_declaration(exported=exported))
            elif self._check(TokenKind.ENUM):
                children.append(self._parse_enum_declaration(exported=exported))
            else:
                children.append(self._parse_function(exported=exported))
                function_count += 1

        if function_count == 0:
            self._raise("expected at least one function")

        root = self._append(NodeKind.PROGRAM, start, children=tuple(children))
        self.arena.symbol_count = self.interner.length
        self.arena.set_root(root)
        self.arena.validate()
        names = tuple(
            self.interner.name(symbol_id)
            for symbol_id in range(self.interner.length)
        )
        return IndependentParseResult(self.arena, names)

    # ------------------------------------------------------------------
    # Declarations and types
    # ------------------------------------------------------------------

    def _parse_module_declaration(self, start: TokenRecord) -> int:
        name = self._parse_module_name()
        self._consume_statement_newline("expected newline after module declaration")
        return self._append(
            NodeKind.MODULE_DECLARATION,
            start,
            payload=DeclarationPayload(self._symbol(name), -1, 0),
        )

    def _parse_import_declaration(self) -> int:
        start = self._consume(TokenKind.FROM, "expected 'from'")
        module_name = self._parse_module_name()
        self._consume(TokenKind.IMPORT, "expected 'import' after module name")
        symbol = self._consume(TokenKind.IDENTIFIER, "expected imported symbol")
        alias: TokenRecord | None = None
        if self._match(TokenKind.AS):
            alias = self._consume(TokenKind.IDENTIFIER, "expected import alias")
        self._consume_statement_newline("expected newline after import declaration")

        module_node = self._identifier(module_name, start)
        symbol_node = self._identifier(symbol.text, symbol)
        child_nodes = [module_node, symbol_node]
        flags = 0
        if alias is not None:
            flags = 1
            child_nodes.append(self._identifier(alias.text, alias))
        return self._append(
            NodeKind.IMPORT_DECLARATION,
            start,
            payload=DeclarationPayload(self._symbol(module_name), -1, flags),
            children=tuple(child_nodes),
        )

    def _parse_module_name(self) -> str:
        parts = [self._consume(TokenKind.IDENTIFIER, "expected module name").text]
        while self._match(TokenKind.DOT):
            parts.append(
                self._consume(
                    TokenKind.IDENTIFIER,
                    "expected module name after '.'",
                ).text
            )
        return ".".join(parts)

    def _parse_foreign_function(self) -> int:
        start = self._consume(TokenKind.FN, "expected 'fn' after 'foreign'")
        name = self._consume_identifier("expected foreign function name")
        self._consume(TokenKind.LEFT_PAREN, "expected '(' after foreign function name")
        parameters = self._parse_parameters()
        self._consume(TokenKind.RIGHT_PAREN, "expected ')' after parameters")
        self._consume(TokenKind.ARROW, "expected '->' before foreign return type")
        return_type = self._parse_type()
        self._consume_statement_newline("expected newline after foreign declaration")
        children = parameters + (return_type,)
        return self._append(
            NodeKind.FOREIGN_FUNCTION,
            start,
            payload=FunctionPayload(
                self._symbol(name.text),
                -1,
                parameters[0] if parameters else 0,
                len(parameters),
                -1,
            ),
            children=children,
        )

    def _parse_function(self, *, exported: bool) -> int:
        start = self._consume(TokenKind.FN, "expected 'fn'")
        name = self._consume_identifier("expected function name")
        type_parameters, type_parameter_names = self._parse_type_parameters()

        previous = self._active_type_parameters
        self._active_type_parameters = set(type_parameter_names)
        try:
            self._consume(TokenKind.LEFT_PAREN, "expected '(' after function name")
            parameters = self._parse_parameters()
            self._consume(TokenKind.RIGHT_PAREN, "expected ')' after parameters")
            self._consume(TokenKind.ARROW, "expected '->' before return type")
            return_type = self._parse_type()
            if self._check(TokenKind.LEFT_BRACE):
                self._raise(
                    "obsolete brace syntax",
                    code=DiagnosticCode.PARSE_OBSOLETE_BRACE,
                )
            self._consume(TokenKind.COLON, "expected ':' after return type")
            self._consume(TokenKind.NEWLINE, "expected newline after ':'")
            self._consume(TokenKind.INDENT, "expected indented block")
            body = self._parse_block_v0_6()
        finally:
            self._active_type_parameters = previous

        children = type_parameters + parameters + (return_type, body)
        flags = 1 if exported else 0
        return self._append(
            NodeKind.FUNCTION,
            start,
            payload=FunctionPayload(
                self._symbol(name.text),
                -1,
                parameters[0] if parameters else 0,
                len(parameters),
                body,
            ),
            children=children,
            flags=flags,
        )

    def _parse_type_parameters(self) -> tuple[tuple[int, ...], tuple[str, ...]]:
        if not self._match(TokenKind.LESS):
            return (), ()
        nodes: list[int] = []
        names: list[str] = []
        while True:
            token = self._consume(TokenKind.IDENTIFIER, "expected type parameter name")
            constraint = "value"
            constraint_token = token
            if self._match(TokenKind.COLON):
                constraint_token = self._consume(
                    TokenKind.IDENTIFIER,
                    "expected type parameter constraint",
                )
                constraint = constraint_token.text
            constraint_node = self._identifier(constraint, constraint_token)
            nodes.append(
                self._append(
                    NodeKind.TYPE_PARAMETER,
                    token,
                    payload=DeclarationPayload(self._symbol(token.text), -1, 0),
                    children=(constraint_node,),
                )
            )
            names.append(token.text)
            if not self._match(TokenKind.COMMA):
                break
            if self._check(TokenKind.GREATER):
                self._raise("expected type parameter after ','")
        self._consume(TokenKind.GREATER, "expected '>' after type parameters")
        if len(set(names)) != len(names):
            self._raise("duplicate type parameter")
        return tuple(nodes), tuple(names)

    def _parse_record_declaration(self, *, exported: bool) -> int:
        start = self._consume(TokenKind.RECORD, "expected 'record'")
        name = self._consume(TokenKind.IDENTIFIER, "expected record name")
        type_parameters, type_parameter_names = self._parse_type_parameters()

        previous = self._active_type_parameters
        self._active_type_parameters = set(type_parameter_names)
        try:
            self._consume(TokenKind.COLON, "expected ':' after record name")
            self._consume(TokenKind.NEWLINE, "expected newline after record ':'")
            self._consume(TokenKind.INDENT, "expected indented record fields")
            fields: list[int] = []
            while not self._check(TokenKind.DEDENT) and not self._check(TokenKind.EOF):
                field_name = self._consume(
                    TokenKind.IDENTIFIER,
                    "expected record field name",
                )
                self._consume(TokenKind.COLON, "expected ':' after record field name")
                field_type = self._parse_type()
                self._consume_statement_newline("expected newline after record field")
                fields.append(
                    self._append(
                        NodeKind.RECORD_FIELD,
                        field_name,
                        payload=DeclarationPayload(self._symbol(field_name.text), -1, 0),
                        children=(field_type,),
                    )
                )
            if not fields:
                self._raise("expected at least one record field", name)
            self._consume(TokenKind.DEDENT, "expected dedent after record declaration")
        finally:
            self._active_type_parameters = previous

        return self._append(
            NodeKind.RECORD_DECLARATION,
            start,
            payload=DeclarationPayload(
                self._symbol(name.text),
                -1,
                1 if exported else 0,
            ),
            children=type_parameters + tuple(fields),
        )

    def _parse_enum_declaration(self, *, exported: bool) -> int:
        start = self._consume(TokenKind.ENUM, "expected 'enum'")
        name = self._consume(TokenKind.IDENTIFIER, "expected enum name")
        type_parameters, type_parameter_names = self._parse_type_parameters()

        previous = self._active_type_parameters
        self._active_type_parameters = set(type_parameter_names)
        try:
            self._consume(TokenKind.COLON, "expected ':' after enum name")
            self._consume(TokenKind.NEWLINE, "expected newline after enum ':'")
            self._consume(TokenKind.INDENT, "expected indented enum variants")
            variants: list[int] = []
            while not self._check(TokenKind.DEDENT) and not self._check(TokenKind.EOF):
                variant = self._consume(
                    TokenKind.IDENTIFIER,
                    "expected enum variant name",
                )
                fields: list[int] = []
                if self._match(TokenKind.LEFT_PAREN):
                    if self._check(TokenKind.RIGHT_PAREN):
                        self._raise("expected enum payload field")
                    while True:
                        field_name = self._consume(
                            TokenKind.IDENTIFIER,
                            "expected enum payload field name",
                        )
                        self._consume(
                            TokenKind.COLON,
                            "expected ':' after enum payload field name",
                        )
                        field_type = self._parse_type()
                        fields.append(
                            self._append(
                                NodeKind.RECORD_FIELD,
                                field_name,
                                payload=DeclarationPayload(
                                    self._symbol(field_name.text), -1, 0
                                ),
                                children=(field_type,),
                            )
                        )
                        if not self._match(TokenKind.COMMA):
                            break
                        if self._check(TokenKind.RIGHT_PAREN):
                            self._raise("expected enum payload field after ','")
                    self._consume(
                        TokenKind.RIGHT_PAREN,
                        "expected ')' after enum payload fields",
                    )
                self._consume_statement_newline("expected newline after enum variant")
                variants.append(
                    self._append(
                        NodeKind.ENUM_VARIANT,
                        variant,
                        payload=DeclarationPayload(self._symbol(variant.text), -1, 0),
                        children=tuple(fields),
                    )
                )
            if not variants:
                self._raise("expected at least one enum variant", name)
            self._consume(TokenKind.DEDENT, "expected dedent after enum declaration")
        finally:
            self._active_type_parameters = previous

        return self._append(
            NodeKind.ENUM_DECLARATION,
            start,
            payload=DeclarationPayload(
                self._symbol(name.text),
                -1,
                1 if exported else 0,
            ),
            children=type_parameters + tuple(variants),
        )

    def _parse_parameters(self) -> tuple[int, ...]:
        parameters: list[int] = []
        if self._check(TokenKind.RIGHT_PAREN):
            return ()
        while True:
            name = self._consume(TokenKind.IDENTIFIER, "expected parameter name")
            self._consume(TokenKind.COLON, "expected ':' after parameter name")
            type_node = self._parse_type()
            parameters.append(
                self._append(
                    NodeKind.PARAMETER,
                    name,
                    payload=DeclarationPayload(self._symbol(name.text), -1, 0),
                    children=(type_node,),
                )
            )
            if not self._match(TokenKind.COMMA):
                return tuple(parameters)
            if self._check(TokenKind.RIGHT_PAREN):
                self._raise("expected parameter after ','")

    def _parse_type(self) -> int:
        start = self._peek()
        if self._match(TokenKind.AMPERSAND):
            mutable = self._match(TokenKind.MUT)
            if self._match(TokenKind.LEFT_BRACKET):
                element = self._parse_type()
                if self.arena.node(element).kind is not NodeKind.TYPE_NAME:
                    self._raise(
                        "slice element type must be a scalar type",
                        start,
                    )
                self._consume(
                    TokenKind.RIGHT_BRACKET,
                    "expected ']' after slice element type",
                )
                return self._append(
                    NodeKind.SLICE_TYPE,
                    start,
                    payload=IntegerPayload(1 if mutable else 0),
                    children=(element,),
                )
            target = self._parse_type()
            return self._append(
                NodeKind.REFERENCE_TYPE,
                start,
                payload=IntegerPayload(1 if mutable else 0),
                children=(target,),
            )

        if self._match(TokenKind.TRIT, TokenKind.TRYTE, TokenKind.I64, TokenKind.F64):
            token = self._previous()
            result = self._type_name_node(token.text, token)
        elif self._check(TokenKind.IDENTIFIER) and self._peek().text in _PRIMITIVE_IDENTIFIER_TYPES:
            token = self._advance()
            result = self._type_name_node(token.text, token)
        elif self._check(TokenKind.IDENTIFIER):
            nominal = self._advance()
            if nominal.text in self._active_type_parameters:
                result = self._append(
                    NodeKind.TYPE_PARAMETER_TYPE,
                    nominal,
                    payload=SymbolPayload(self._symbol(nominal.text)),
                )
                if self._check(TokenKind.LEFT_BRACKET):
                    self._raise(
                        "type parameter arrays require a concrete specialization",
                        nominal,
                    )
                return result
            parts = [nominal.text]
            while self._match(TokenKind.DOT):
                parts.append(
                    self._consume(
                        TokenKind.IDENTIFIER,
                        "expected nominal type name after '.'",
                    ).text
                )
            arguments = self._parse_type_arguments()
            result = self._append(
                NodeKind.NOMINAL_TYPE,
                nominal,
                payload=SymbolPayload(self._symbol(".".join(parts))),
                children=arguments,
            )
        else:
            self._raise(
                "expected type 'trit', 'tryte', 'i64', 'f64', 'string', or nominal type"
            )
            raise AssertionError("unreachable")

        while self._match(TokenKind.LEFT_BRACKET):
            negative = self._match(TokenKind.MINUS)
            length = self._consume(TokenKind.INTEGER, "expected static array length")
            value = int(length.text)
            if negative:
                value = -value
            self._consume(TokenKind.RIGHT_BRACKET, "expected ']' after array length")
            result = self._append(
                NodeKind.ARRAY_TYPE,
                start,
                payload=IntegerPayload(value),
                children=(result,),
            )
        return result

    def _parse_type_arguments(self) -> tuple[int, ...]:
        if not self._match(TokenKind.LESS):
            return ()
        arguments: list[int] = []
        while True:
            arguments.append(self._parse_type())
            if not self._match(TokenKind.COMMA):
                break
            if self._check(TokenKind.GREATER):
                self._raise("expected type argument after ','")
        self._consume(TokenKind.GREATER, "expected '>' after type arguments")
        return tuple(arguments)

    # ------------------------------------------------------------------
    # Statements
    # ------------------------------------------------------------------

    def _parse_block_v0_6(self) -> int:
        start = self._previous()
        statements: list[int] = []
        while not self._check(TokenKind.DEDENT) and not self._check(TokenKind.EOF):
            statements.append(self._parse_statement())
        if not statements:
            self._raise("expected at least one statement in block")
        self._consume(TokenKind.DEDENT, "expected dedent after block")
        return self._append(NodeKind.BLOCK, start, children=tuple(statements))

    def _parse_statement(self) -> int:
        if self._check(TokenKind.LEFT_BRACE) or self._check(TokenKind.RIGHT_BRACE):
            self._raise(
                "obsolete brace syntax",
                code=DiagnosticCode.PARSE_OBSOLETE_BRACE,
            )
        if self._check(TokenKind.SEMICOLON):
            self._raise(
                "obsolete ';' syntax",
                code=DiagnosticCode.PARSE_OBSOLETE_SEMICOLON,
            )
        if self._check(TokenKind.SWITCH):
            self._raise(
                "obsolete 'switch' syntax, use 'match'",
                code=DiagnosticCode.PARSE_OBSOLETE_SWITCH,
            )

        if self._match(TokenKind.BREAK):
            return self._parse_break(self._previous())
        if self._match(TokenKind.CONTINUE):
            return self._parse_continue(self._previous())
        if self._match(TokenKind.RETURN):
            return self._parse_return(self._previous())
        if self._match(TokenKind.MATCH):
            return self._parse_match_statement(self._previous())
        if self._check(TokenKind.SELECT) and self._next_kind() is TokenKind.COLON:
            self._advance()
            return self._parse_select(self._previous())
        if self._match(TokenKind.WHILE):
            return self._parse_while(self._previous())
        if self._match(TokenKind.FOR):
            return self._parse_for(self._previous())
        if self._match(TokenKind.DISCARD):
            return self._parse_discard(self._previous())
        if self._check(TokenKind.MUT):
            return self._parse_variable_declaration()
        if self._check(TokenKind.IDENTIFIER) or self._check(TokenKind.SELECT) or self._check(TokenKind.CASE):
            next_token = self.tokens[self.current + 1] if self.current + 1 < len(self.tokens) else None
            if next_token is not None and next_token.kind is TokenKind.COLON:
                return self._parse_variable_declaration()
            return self._parse_assignment()
        if self._check(TokenKind.STAR):
            return self._parse_assignment()

        self._raise(
            "expected variable declaration, 'return', 'while', 'for', 'break', 'continue', or assignment"
        )
        raise AssertionError("unreachable")

    def _parse_variable_declaration(self) -> int:
        start = self._peek()
        mutable = self._match(TokenKind.MUT)
        name = self._consume(TokenKind.IDENTIFIER, "expected variable name")
        self._consume(TokenKind.COLON, "expected ':' after variable name")
        type_node = self._parse_type()
        self._consume(TokenKind.EQUAL, "expected '=' after variable type")
        initializer = self._parse_initializer()
        if self._check(TokenKind.SEMICOLON):
            self._raise(
                "obsolete ';' syntax",
                code=DiagnosticCode.PARSE_OBSOLETE_SEMICOLON,
            )
        self._consume_statement_newline("expected newline after declaration")
        return self._append(
            NodeKind.VARIABLE_DECLARATION,
            start,
            payload=DeclarationPayload(
                self._symbol(name.text), -1, 1 if mutable else 0
            ),
            children=(type_node, initializer),
        )

    def _parse_assignment(self) -> int:
        if self._match(TokenKind.STAR):
            start = self._previous()
            reference = self._parse_unary()
            target = self._append(
                NodeKind.DEREFERENCE_TARGET,
                start,
                children=(reference,),
            )
            self._consume(TokenKind.EQUAL, "expected '=' after dereference target")
            value = self._parse_initializer()
            self._consume_statement_newline("expected newline after assignment")
            return self._append(
                NodeKind.ASSIGNMENT,
                start,
                payload=DeclarationPayload(self._symbol("*"), -1, 0),
                children=(target, value),
            )

        name = self._consume(TokenKind.IDENTIFIER, "expected assignment target")
        target, assignment_symbol = self._parse_assignment_target_tail(name)

        if self._match(TokenKind.PLUS_EQUAL):
            operator_id = _BINARY_OPERATOR_IDS[TokenKind.PLUS]
        else:
            self._consume(
                TokenKind.EQUAL,
                "expected '=' or '+=' after assignment target",
            )
            operator_id = None

        value = self._parse_initializer()
        if self._check(TokenKind.SEMICOLON):
            self._raise(
                "obsolete ';' syntax",
                code=DiagnosticCode.PARSE_OBSOLETE_SEMICOLON,
            )
        self._consume_statement_newline("expected newline after assignment")

        if operator_id is not None:
            operator = self._append(
                NodeKind.BINARY,
                name,
                payload=OperatorPayload(operator_id),
            )
            return self._append(
                NodeKind.COMPOUND_ASSIGNMENT,
                name,
                payload=DeclarationPayload(assignment_symbol, -1, 0),
                children=(target, operator, value),
            )
        return self._append(
            NodeKind.ASSIGNMENT,
            name,
            payload=DeclarationPayload(assignment_symbol, -1, 0),
            children=(target, value),
        )

    def _parse_assignment_target_tail(
        self,
        name: TokenRecord,
    ) -> tuple[int, int]:
        if self._match(TokenKind.LEFT_BRACKET):
            index = self._parse_expression()
            self._consume(TokenKind.RIGHT_BRACKET, "expected ']' after index")
            identifier = self._identifier(name.text, name)
            base = self._append(
                NodeKind.INDEX,
                name,
                children=(identifier, index),
            )
            if self._match(TokenKind.DOT):
                return self._parse_field_target_tail(base)
            return (
                self._append(
                    NodeKind.INDEX_TARGET,
                    name,
                    payload=DeclarationPayload(self._symbol(name.text), -1, 0),
                    children=(index,),
                ),
                self._symbol(name.text),
            )

        if self._match(TokenKind.DOT):
            identifier = self._identifier(name.text, name)
            return self._parse_field_target_tail(identifier)

        symbol = self._symbol(name.text)
        return (
            self._append(
                NodeKind.ASSIGNMENT_TARGET,
                name,
                payload=DeclarationPayload(symbol, -1, 0),
            ),
            symbol,
        )

    def _parse_field_target_tail(self, base: int) -> tuple[int, int]:
        field = self._consume(TokenKind.IDENTIFIER, "expected field name after '.'")
        while self._match(TokenKind.DOT):
            base = self._append(
                NodeKind.FIELD_ACCESS,
                field,
                payload=SymbolPayload(self._symbol(field.text)),
                children=(base,),
            )
            field = self._consume(TokenKind.IDENTIFIER, "expected field name after '.'")
        symbol = self._symbol(field.text)
        return (
            self._append(
                NodeKind.FIELD_TARGET,
                field,
                payload=DeclarationPayload(symbol, -1, 0),
                children=(base,),
            ),
            symbol,
        )

    def _parse_initializer(self) -> int:
        if self._match(TokenKind.LEFT_BRACKET):
            return self._finish_array_literal(self._previous())
        return self._parse_expression()

    def _finish_array_literal(self, start: TokenRecord) -> int:
        elements: list[int] = []
        if not self._check(TokenKind.RIGHT_BRACKET):
            while True:
                elements.append(self._parse_expression())
                if not self._match(TokenKind.COMMA):
                    break
                if self._check(TokenKind.RIGHT_BRACKET):
                    self._raise("expected array element after ','")
        end = self._consume(TokenKind.RIGHT_BRACKET, "expected ']' after array literal")
        return self._append(
            NodeKind.ARRAY_LITERAL,
            start,
            children=tuple(elements),
            end=end,
        )

    def _parse_return(self, start: TokenRecord) -> int:
        expression = self._parse_expression()
        if self._check(TokenKind.SEMICOLON):
            self._raise(
                "obsolete ';' syntax",
                code=DiagnosticCode.PARSE_OBSOLETE_SEMICOLON,
            )
        self._consume_statement_newline("expected newline after return value")
        return self._append(NodeKind.RETURN, start, children=(expression,))

    def _parse_discard(self, start: TokenRecord) -> int:
        expression = self._parse_expression()
        if self._check(TokenKind.SEMICOLON):
            self._raise(
                "obsolete ';' syntax",
                code=DiagnosticCode.PARSE_OBSOLETE_SEMICOLON,
            )
        self._consume_statement_newline("expected newline after discard expression")
        return self._append(NodeKind.DISCARD, start, children=(expression,))

    def _parse_break(self, start: TokenRecord) -> int:
        if self._check(TokenKind.SEMICOLON):
            self._raise(
                "obsolete ';' syntax",
                code=DiagnosticCode.PARSE_OBSOLETE_SEMICOLON,
            )
        self._consume(TokenKind.NEWLINE, "expected newline after break")
        return self._append(NodeKind.BREAK, start)

    def _parse_continue(self, start: TokenRecord) -> int:
        if self._check(TokenKind.SEMICOLON):
            self._raise(
                "obsolete ';' syntax",
                code=DiagnosticCode.PARSE_OBSOLETE_SEMICOLON,
            )
        self._consume(TokenKind.NEWLINE, "expected newline after continue")
        return self._append(NodeKind.CONTINUE, start)

    def _parse_while(self, start: TokenRecord) -> int:
        condition = self._parse_expression()
        self._consume(TokenKind.COLON, "expected ':' after while condition")
        self._consume(TokenKind.NEWLINE, "expected newline after ':'")
        self._consume(TokenKind.INDENT, "expected indented block")
        body = self._parse_block_v0_6()
        return self._append(
            NodeKind.WHILE,
            start,
            children=(condition, body),
        )

    def _parse_for(self, start: TokenRecord) -> int:
        variable = self._consume(TokenKind.IDENTIFIER, "expected loop variable name")
        self._consume(TokenKind.COLON, "expected ':' after loop variable name")
        variable_type = self._parse_type()
        self._consume(TokenKind.IN, "expected 'in' after loop variable type")
        range_token = self._consume(TokenKind.RANGE, "expected 'range' after 'in'")
        self._consume(TokenKind.LEFT_PAREN, "expected '(' after 'range'")
        arg1 = self._parse_expression()
        if self._match(TokenKind.COMMA):
            arg2 = self._parse_expression()
            if self._match(TokenKind.COMMA):
                arg3 = self._parse_expression()
                start_expression, end_expression, step_expression = arg1, arg2, arg3
            else:
                start_expression, end_expression = arg1, arg2
                step_expression = self._integer_literal(1, range_token)
        else:
            start_expression = self._integer_literal(0, range_token)
            end_expression = arg1
            step_expression = self._integer_literal(1, range_token)
        self._consume(TokenKind.RIGHT_PAREN, "expected ')' after range bounds")
        self._consume(TokenKind.COLON, "expected ':' after range clause")
        self._consume(TokenKind.NEWLINE, "expected newline after ':'")
        self._consume(TokenKind.INDENT, "expected indented block")
        body = self._parse_block_v0_6()
        return self._append(
            NodeKind.FOR,
            start,
            payload=DeclarationPayload(self._symbol(variable.text), -1, 0),
            children=(
                variable_type,
                start_expression,
                end_expression,
                step_expression,
                body,
            ),
        )

    def _parse_match_statement(self, start: TokenRecord) -> int:
        selector = self._parse_expression()
        self._consume(TokenKind.COLON, "expected ':' after match expression")
        self._consume(TokenKind.NEWLINE, "expected newline after ':'")
        self._consume(TokenKind.INDENT, "expected indented block")

        cases: list[int] = []
        had_fallback = False
        while not self._check(TokenKind.DEDENT) and not self._check(TokenKind.EOF):
            if had_fallback:
                self._raise(
                    "explicit case arm after fallback arm in match statement",
                    code=DiagnosticCode.PARSE_INVALID_MATCH_ARM,
                )
            case, fallback = self._parse_statement_match_case()
            had_fallback = had_fallback or fallback
            cases.append(case)

        if not cases:
            self._raise(
                "expected at least one match arm",
                code=DiagnosticCode.PARSE_EXPECTED_MATCH_ARM,
            )
        self._consume(TokenKind.DEDENT, "expected dedent after match block")
        return self._append(
            NodeKind.SWITCH,
            start,
            children=(selector,) + tuple(cases),
        )

    def _parse_statement_match_case(self) -> tuple[int, bool]:
        if self._match(TokenKind.ELSE):
            start = self._previous()
            self._consume(TokenKind.COLON, "expected ':' after 'else'")
            self._consume(TokenKind.NEWLINE, "expected newline after ':'")
            self._consume(TokenKind.INDENT, "expected indented block")
            body = self._parse_block_v0_6()
            return (
                self._append(NodeKind.MATCH_CASE, start, children=(body,)),
                True,
            )

        label, start = self._parse_match_case_label()
        self._consume(TokenKind.COLON, "expected ':' after case label")
        self._consume(TokenKind.NEWLINE, "expected newline after ':'")
        self._consume(TokenKind.INDENT, "expected indented block")
        body = self._parse_block_v0_6()
        return (
            self._append(
                NodeKind.MATCH_CASE,
                start,
                children=(label, body),
            ),
            False,
        )
